--- a/client/package.json
+++ b/client/package.json
@@ -13,32 +13,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@react-three/drei": "^9.121.5",
-    "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-query": "^5.66.7",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
-    "html2canvas": "^1.4.1",
+  
     "install": "^0.13.0",
-    "jspdf": "^1.4.0",
+    
     "lucide-react": "^0.474.0",
     "npm": "^10.9.2",
-    "qrcode.react": "^4.2.0",
+   
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-intersection-observer": "^9.15.1",
-    "react-markdown": "^9.1.0",
-    "react-router-dom": "^6.29.0",
-    "react-scroll-parallax": "^3.4.5",
-    "react-select": "^5.10.1",
-    "react-slick": "^0.30.3",
-    "recharts": "^2.15.1",
-    "slick-carousel": "^1.8.1",
-    "three": "^0.173.0"
+    "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
